<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.SettingActivity">

    <ImageView
        android:id="@+id/image_blur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop" />

    <com.shenhua.oneread.widget.ElasticScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorOverlay50">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <RelativeLayout
                    android:id="@+id/rl_user"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerInParent="true"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_user_fill_white" />

                    <ImageView
                        android:id="@+id/iv_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_offline" />

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/userItem"
                style="@style/ItemLayoutStyle"
                android:visibility="gone">

                <TextView
                    style="@style/ItemLayoutTextStyle"
                    android:text="@string/string_setting_user" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/favoriteItem"
                style="@style/ItemLayoutStyle">

                <TextView
                    style="@style/ItemLayoutTextStyle"
                    android:text="@string/string_setting_favorite" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/broweItem"
                style="@style/ItemLayoutStyle">

                <TextView
                    style="@style/ItemLayoutTextStyle"
                    android:text="@string/string_setting_browse" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/picItem"
                style="@style/ItemLayoutStyle">

                <TextView
                    style="@style/ItemLayoutTextStyle"
                    android:text="@string/string_setting_save_pic" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/cleanItem"
                style="@style/ItemLayoutStyle">

                <TextView
                    style="@style/ItemLayoutTextStyle"
                    android:text="@string/string_setting_clean" />

                <TextView
                    android:id="@+id/tv_set_cache"
                    style="@style/ItemLayoutTextStyle"
                    android:layout_alignParentEnd="true"
                    android:textColor="#AAFFFFFF"
                    tools:text="0KB" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/aboutItem"
                style="@style/ItemLayoutStyle">

                <TextView
                    style="@style/ItemLayoutTextStyle"
                    android:text="@string/string_setting_about" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_layout_padding" />

        </LinearLayout>

    </com.shenhua.oneread.widget.ElasticScrollView>

</RelativeLayout>